--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title><link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    
+    <p>dodaje nowy paragraf</p>
 </body>
 </html>
